ci: Fix continuous build. No longer using mvnw tied to Java 8. (#1638)